# axion

axion-core/: Cargo.toml
axion-core/src/: block.rs  blockchain.rs  errors.rs  lib.rs  transaction.rs
axion-core/src/services/: hasher.rs
axion-miner/: Cargo.toml
axion-miner/src/services/: mempool.rs  mod.rs  utxo_store.rs
