[package]
name = "axion_miner"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.42"
sha2 = "0.10.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["serde"] }
thiserror = "2.0.17"
hex = "0.4.3"
bs58 = "0.5.1"
axion_core = {path = "../axion-core"}